Added ap-south-1 region

--- a/templates/Ansible-Tower-c7-Ec2.template
+++ b/templates/Ansible-Tower-c7-Ec2.template
@@ -118,6 +118,9 @@
             "ap-northeast-2": {
                 "CENTOS7": "ami-c74789a9"
             },
+            "ap-south-1": {
+                "CENTOS7": "ami-d2c924b2"
+            },
             "ap-southeast-1": {
                 "CENTOS7": "ami-f068a193"
             },
