--- a/ci/config.yml
+++ b/ci/config.yml
@@ -15,7 +15,6 @@ global:
     - ap-southeast-2
     - ap-northeast-2
     - ap-south-1
-    
 tests:
   c7:
     template_file: Ansible-Tower-c7-QuickStart.template
@@ -23,3 +22,13 @@ tests:
   el7:
     template_file: Ansible-Tower-el7-QuickStart.template
     parameter_input: Ansible-Tower-el7-QuickStart.json
+    regions:
+      - us-east-1
+      - us-west-1
+      - eu-west-1
+      - us-west-2
+      - sa-east-1
+      - eu-central-1
+      - ap-northeast-1
+      - ap-southeast-1
+      - ap-southeast-2
