--- a/ci/config.yml
+++ b/ci/config.yml
@@ -1,34 +1,34 @@
 global:
-  qsname: quickstart-ansible
-  reporting: true
   marketplace: true
-  cis3bucket: s3://quickstart-ci-bucket
+  owner: quickstart-eng@amazon.com
+  qsname: quickstart-ansible
   regions:
-    - us-east-1
-    - us-west-1
-    - eu-west-1
-    - us-west-2
-    - sa-east-1
-    - eu-central-1
     - ap-northeast-1
-    - ap-southeast-1
-    - ap-southeast-2
     - ap-northeast-2
     - ap-south-1
+    - ap-southeast-1
+    - ap-southeast-2
+    - eu-central-1
+    - eu-west-1
+    - sa-east-1
+    - us-east-1
+    - us-west-1
+    - us-west-2
+  reporting: true
 tests:
   c7:
-    template_file: Ansible-Tower-c7-QuickStart.template
     parameter_input: Ansible-Tower-c7-QuickStart.json
+    template_file: Ansible-Tower-c7-QuickStart.template
   el7:
-    template_file: Ansible-Tower-el7-QuickStart.template
     parameter_input: Ansible-Tower-el7-QuickStart.json
     regions:
-      - us-east-1
-      - us-west-1
-      - eu-west-1
-      - us-west-2
-      - sa-east-1
-      - eu-central-1
       - ap-northeast-1
       - ap-southeast-1
       - ap-southeast-2
+      - eu-central-1
+      - eu-west-1
+      - sa-east-1
+      - us-east-1
+      - us-west-1
+      - us-west-2
+    template_file: Ansible-Tower-el7-QuickStart.template
